Fill Java curriculum gaps: OOP 14-18, JVM internals, collections eval.
Add OOP implementation/design/project parts, JVM bytecode/JIT/tuning/JFR concepts, collections Part 33, plus exceptions and structured-concurrency follow-ups. Fix the java-oops TOC so Lesson 1 is included.

Co-authored-by: Cursor <cursoragent@cursor.com>